Managed to get a working version (finally!)

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -1,5 +1,6 @@
 {
-  "_comment": "src/localization/en/translation.json",
+  "_comment": "src/assets/translations/en/translation.json",
+  "test": "success",
   "demoScope": {
     "title": "i18next is Great!",
     "description": "Everyone understands me!"
