Figured out namespaces... time to make some decisions and execute

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -1,8 +1,11 @@
 {
   "_comment": "src/assets/translations/en/translation.json",
-  "test": "success",
-  "demoScope": {
-    "title": "i18next is Great!",
+  "common": {
+    "test": "SUCCESS",
+    "hello": "there"
+  },
+  "landingPage": {
+    "title": "Virtual lines that save time.",
     "description": "Everyone understands me!"
   }
 }
