Minor fixes and touch ups to types, modals, and translations

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -58,6 +58,9 @@
   "createQueueModal": {
     "title": "Create a Queue"
   },
+  "editQueueModal": {
+    "title": "Edit a Queue"
+  },
   "deferPositionModal": {
     "label": "How long would you like to defer for?"
   },
