Added modal for organizer to create user

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -77,6 +77,7 @@
     "dialog": "Are you sure you want to abandon your position in line? You will have to enter the code again and start from the end of the line if you choose to rejoin."
   },
   "queueDashboardMenu": {
+    "create": "Create User",
     "edit": "Edit Queue",
     "end": "End Queue",
     "pause": "Pause Queue",
