--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -106,5 +106,8 @@
     "requesting": "Requesting for camera permission",
     "no_access": "No access to camera",
     "scan_again": "Tap to Scan Again"
+  },
+  "errorScreen": {
+    "message": "Uh... This is awkward! It seems like whatever you're trying to access can't be found. Maybe find your way back at fiefoe.com."
   }
 }
