First iteration of backend to frontend integration

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -81,7 +81,8 @@
     "edit": "Edit Queue",
     "end": "End Queue",
     "pause": "Pause Queue",
-    "share": "Share Queue"
+    "share": "Share Queue",
+    "logout": "Logout"
   },
   "queueMultiSelectButtons": {
     "pause": "Pause Queues",
