--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -110,5 +110,8 @@
   },
   "errorScreen": {
     "message": "Uh... This is awkward! It seems like whatever you're trying to access can't be found. Maybe find your way back at fiefoe.com."
+  },
+  "verifySMSModal": {
+    "title": "Verify your phone number"
   }
 }
