Major bug fixes and changes to param passing thru nav

--- a/fulcrum_gateway/src/assets/translations/en/translation.json
+++ b/fulcrum_gateway/src/assets/translations/en/translation.json
@@ -107,7 +107,7 @@
     "deferred_prefix": "Deferred",
     "average_prefix": "Average Wait",
     "abandoned_prefix": "Abandoned",
-    "noshows_prefix": "No Shows"
+    "noshow_prefix": "No Shows"
   },
   "QRCodeScanner": {
     "message": "We are going live in July!",
