Fixes, type adjustments, implement new multi-touch gestures debugging now

--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -162,5 +162,8 @@
   },
   "generalErrorAlert": {
     "title": "Oops! Something went wrong"
+  },
+  "confirmDeleteAlert": {
+    "header": "CONFIRM YOUR DELETE"
   }
 }
