--- a/gateway/assets/translations/fr/translation.json
+++ b/gateway/assets/translations/fr/translation.json
@@ -1,10 +1,11 @@
 {
   "common": {
-    "test": "success",
-    "hello": "there"
-  },
-  "landingPage": {
-    "title": "Economiser le tempts avec les lignes digital.",
-    "description": "Everyone understands me!"
+    "cancel": "Annuler",
+    "ok": "Ok",
+    "submit": "Soumettre",
+    "submitting": "Soumission...",
+    "confirm": "Confirmer",
+    "login": "Connexion",
+    "signup": "S'inscrire"
   }
 }
