--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -226,9 +226,9 @@
   },
   "changeQueuePasswordModal": {
     "title": "Change queue password",
-    "password_label": "New queue password",
-    "password_helper": "Enter your new password",
-    "password_placeholder": "Super secret password",
+    "new_password_label": "New queue password",
+    "new_password_helper": "Enter your new password",
+    "new_password_placeholder": "Super secret password",
     "confirm_password_label": "Confirm new queue password",
     "confirm_password_helper": "Re-enter your new password",
     "confirm_password_placeholder": "Super secret password again",
