Major fixes and improvements, added assets to SEO hotspots

--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -41,10 +41,12 @@
     "phone_number_missing": "We need your number to notify you",
     "phone_number_too_long": "You have a very long phone number!",
     "phone_number_not_number": "That doesn't look like a phone number...",
-    "queue_id": "Queue ID",
+    "join_code": "Join code",
+    "join_code_helper": "The join code must be 6 characters.",
     "name": "Your name",
+    "name_helper": "Your name for reference please.",
     "phone_number": "Your phone number",
-    "helper": "Queue ID must be 6 characters.",
+    "phone_number_helper": "So we can notify you when it's your turn.",
     "or": " or ",
     "footer": " to create your own virtual queue at",
     "cannot_enqueue_message": "Something wrong happened (we should be more specific about this)",
@@ -69,8 +71,8 @@
     "address_label": "Address",
     "address_helper": "Set your address so that queuers can find your venue.",
     "address_placeholder": "King's Cross Station platform 9 3/4",
-    "password_label": "Address",
-    "password_helper": "Set your address so that queuers can find your venue.",
+    "password_label": "Password",
+    "password_helper": "Set your queue password so that assistants can manage queues (queuers don't need passwords)",
     "password_placeholder": "Something super secret"
   },
   "userDashboard": {
