--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -51,7 +51,7 @@
     "phone_number_helper": "So we can notify you when it's your turn.",
     "or": " or ",
     "footer": " to create your own virtual queue at",
-    "cannot_enqueue_message": "Something wrong happened (we should be more specific about this)",
+    "cannot_enqueue_message": "Something wrong happened and we can't seem to join the queue... Please try again",
     "join_code_not_exist_message": "It looks like the join code you entered doesn't match any queue we have on record. Please check your code and try again, or use the QR code scanner.",
     "queue_paused_or_inactive_message": "It looks like the queue you're trying to join is either paused or inactive. Please try again or ask the organizer for details."
   },
