Minor fixes to menu and enqueue form, started testing assistant

--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -119,7 +119,7 @@
   },
   "queueDashboardMenu": {
     "create_user": "Create User",
-    "end_queue": "End Queue",
+    "delete_queue": "Delete Queue",
     "pause_queue": "Pause Queue",
     "unpause_queue": "Unpause Queue",
     "share_queue": "Share Queue",
